k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zzz-search-api
  namespace: zzz-search-api
  labels:
    app.kubernetes.io/name: zzz-search-api
spec:
  selector:
    app.kubernetes.io/name: zzz-search-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
